<resources>
    <string name="app_name">AlexWeather</string>
    <string name="add_button">Add</string>
    <string name="no_items_text">No saved locations</string>
    <string name="add_location_activity_tittle">How add location</string>
    <string name="add_locatiion_choose_tittle">Choose method:</string>
    <string name="add_location_select">Choose</string>
    <string name="add_location_name">By city name</string>
    <string name="add_location_position">By my position</string>
    <string name="add_location_coord">By coordinates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="unit_temp">°C</string>
    <string name="temp_min">"min: "</string>
    <string name="temp_max">max:</string>
    <string name="unit_wind">m/s</string>
    <string name="wind">"Wind: "</string>
    <string name="humidity">"humidity: "</string>
    <string name="pressure">"pressure: "</string>
    <string name="unit_humidity">%</string>
    <string name="unit_pressure">mm</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="now">Now</string>
    <string name="search_hint">Enter city name</string>
    <string name="no_town">No such town</string>
    <string name="no_internet">Connection problem!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="wait">Just a second</string>

</resources>
