<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/add_locatiion_choose_tittle"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:text="@string/add_location_position"
            android:textColorLink="?attr/actionModeSplitBackground"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/add_location_name"
            android:textColorLink="?attr/actionModeSplitBackground"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio_coord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/add_location_coord"
            android:textColorLink="?attr/actionModeSplitBackground"
            android:textCursorDrawable="@android:color/holo_green_light"
            android:textSize="22sp" />

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:background="@drawable/btn_main"
            android:padding="20dp"
            android:text="@string/add_location_select"
            android:textSize="24sp" />
    </FrameLayout>

</LinearLayout>